--- a/samples/oauth.yml
+++ b/samples/oauth.yml
@@ -3,10 +3,10 @@ meta:
   version: "0.1"
 header:
   title: oauth 2.0 authorization code grant
-  desc: The authorization code grant type is used to obtain both access tokens and refresh tokens and is optimized for confidential clients. Since this is a redirection-based flow, the client must be capable of interacting with the resource owner's user-agent (typically a web browser) and capable of receiving incoming requests (via redirection) from the authorization server.
   ref:
     url: https://datatracker.ietf.org/doc/html/rfc6749#section-4.1
     section: "4.1"
+    desc: The authorization code grant type is used to obtain both access tokens and refresh tokens and is optimized for confidential clients. Since this is a redirection-based flow, the client must be capable of interacting with the resource owner's user-agent (typically a web browser) and capable of receiving incoming requests (via redirection) from the authorization server.
   roles:
   - resource-owner
   - client
@@ -41,22 +41,52 @@ endpoints:
       desc: used by the client to obtain authorization from the resource owner via user-agent redirection
     request:
       ref: https://datatracker.ietf.org/doc/html/rfc6749#section-4.1.1
+    checks:
+    - user-agent is authenticated
+    - resource-owner grants client's access request
     response:
       ref: https://datatracker.ietf.org/doc/html/rfc6749#section-4.1.2
+      payload:
+      - kind: querystring
+        contents: [authorization-code, local-state]
+      redirect: redirection-uri
   token:
     abbrev: tok
     ref:
       url: https://datatracker.ietf.org/doc/html/rfc6749#section-3.2
       desc: used by the client to exchange an authorization grant for an access token, typically with client authentication
+    checks:
+    - client is authenticated
+    - authorization-code is valid
+    - redirection-uri matches
     request:
       ref: https://datatracker.ietf.org/doc/html/rfc6749#section-4.1.3
+      auth: client-creds
+      payload:
+      - contents: [authorization-code, redirection-uri]
     response:
       ref: https://datatracker.ietf.org/doc/html/rfc6749#section-4.1.4
+      redirect: todo
   redirection:
     abbrev: redir
     ref:
       url: https://datatracker.ietf.org/doc/html/rfc6749#section-3.1.2
       desc: used by the authorization server to return responses containing authorization credentials to the client via the resource owner user-agent
+    request:
+      payload:
+      - kind: querystring
+        contents: [authorization-code, local-state]
+    response:
+      label: log you in or something
+  client-auth:
+    ref:
+      desc: loosely described by spec. generates a redirect to the authorization endpoint
+    response:
+      payload:
+      - kind: querystring
+        contents: [client-identifier, requested-scope, redirection-uri]
+        optional: [local-state]
+      redirect: authorization
 payloads:
   client-identifier:
     icon: 📛
@@ -85,61 +115,32 @@ payloads:
       desc: The authorization code is obtained by using an authorization server as an intermediary between the client and resource owner.  Instead of requesting authorization directly from the resource owner, the client directs the resource owner to an authorization server (via its user-agent as defined in [RFC2616]), which in turn directs the resource owner back to the client with the authorization code.
 auth:
   client:
-    url: https://datatracker.ietf.org/doc/html/rfc6749#section-3.2.1
-    desc: Confidential clients or other clients issued client credentials MUST authenticate with the authorization server as described in Section 2.3 when making requests to the token endpoint.
+    ref:
+      url: https://datatracker.ietf.org/doc/html/rfc6749#section-3.2.1
+      desc: Confidential clients or other clients issued client credentials MUST authenticate with the authorization server as described in Section 2.3 when making requests to the token endpoint.
 flow:
 - roles: [resource-owner, client]
   ref:
     url: https://datatracker.ietf.org/doc/html/rfc6749#section-4.1
     section: 4.1 (A)
-  request:
-    endpoint: client-auth
-  response:
-    payload:
-    - kind: querystring
-      contents: [client-identifier, requested-scope, redirection-uri]
-      optional: [local-state]
-    redirect: authorization
+  endpoint: client-auth
 - roles: [resource-owner, authorization-server]
   ref:
     url: https://datatracker.ietf.org/doc/html/rfc6749#section-4.1
     section: 4.1 (A, B, C)
-  request:
-    endpoint: authorization
-  checks:
-  - user-agent is authenticated
-  - resource-owner grants client's access request
-  response:
-    payload:
-    - kind: querystring
-      contents: [authorization-code, local-state]
-    redirect: redirection-uri
+  endpoint: authorization
 - roles: [resource-owner, client]
   ref:
     url: https://datatracker.ietf.org/doc/html/rfc6749#section-4.1
     section: 4.1 (C)
     desc: NEXT
-  request:
-    endpoint: redirection-uri
-    payload:
-    - kind: querystring
-      contents: [authorization-code, local-state]
+  endpoint: redirection
+  response: false
 - roles: [client, authorization-server]
   ref:
     url: https://datatracker.ietf.org/doc/html/rfc6749#section-4.1
     section: 4.1 (D, E)
-  checks:
-  - client is authenticated
-  - authorization-code is valid
-  - redirection-uri matches
-  request:
-    auth: client-creds
-    payload:
-    - contents: [authorization-code, redirection-uri]
-    endpoint: token
-  response:
-    payload:
-    redirect:
+  endpoint: token
 - roles: [resource-owner, client]
-  response:
-    label: log you in or something
+  endpoint: redirection
+  request: false
